0028862: Unification of empty labels saving procedure.

Added a possibility to save empty labels to a persistent document in case of need.